public/v/release-4.5/_sources/reference_workflows/isaac_for_manipulation/tutorials/pick_and_place/tutorial_pick_and_place.rst.txt
=======================================================================
Tutorial for Multi-Object Pick and Place using cuMotion with Perception
=======================================================================

.. figure:: :ir_lfs:`<resources/isaac_ros_docs/reference_workflows/isaac_for_manipulation/pick_and_place_sped_up.gif>`
   :width: 100%
   :alt: Multi object pick and place example.

Overview
--------

This tutorial walks through running the multi-object Pick and Place workflow on your robot.
The Pick and Place reference workflow has been tested on NVIDIA® Jetson Thor™ (128 GB).

**What You'll Be Doing:**

- Configure the orchestration system for your objects and workspace
- Launch perception and motion planning nodes
- Execute autonomous Pick and Place operations
- Monitor workflow execution with behavior tree visualization

.. note::

   For conceptual understanding and more details, refer to:

   - :doc:`Multi-Object Pick and Place </concepts/manipulation/pick_and_place>` - Workflow concepts
   - :doc:`isaac_ros_manipulation_pick_and_place </reference_workflows/isaac_for_manipulation/packages/isaac_ros_manipulation_pick_and_place/index>` - Package details and quickstart
   - :doc:`Configuration Guide </reference_workflows/isaac_for_manipulation/packages/isaac_ros_manipulation_pick_and_place/configuration_guide>` - Detailed configuration

Tutorial Steps
--------------

#. Follow the setup instructions in :doc:`Setup Hardware and Software for Real Robot with Isaac ROS Manipulation </reference_workflows/isaac_for_manipulation/tutorials/setup/setup_with_gripper>`.

Object Requirements
^^^^^^^^^^^^^^^^^^^

Ensure that you have one of the NGC catalog objects that can be grasped, for example :ir_ngc:`sdetr_grasp <teams/isaac/models/synthetica_detr>`. This tutorial uses the **Mac and Cheese Box** and the **Soup Can**.

If you are using ``FoundationPose``, for the desired object, ensure that you have a mesh and a texture file available for it.

To prepare an object, review :doc:`FoundationPose documentation </repositories_and_packages/isaac_ros_pose_estimation/isaac_ros_foundationpose/index>`.

.. _configure-workflow:

Configure Your Workflow
^^^^^^^^^^^^^^^^^^^^^^^

Prepare Configuration Files and Environment Variables
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Before editing any configuration files, copy them to the appropriate location and set up environment variables based on your installation method. This section handles **all configuration file preparation** (workflow config, behavior tree parameters, and blackboard parameters) and sets up environment variables for simplified command usage.

.. tab-set::
   :sync-group: installation

   .. tab-item:: Binary Package
      :sync: binary

      Binary installations have read-only configuration files in system directories. Copy all necessary files to a writable location:

      .. code:: bash

         # Create a directory for your custom configuration
         mkdir -p ${ISAAC_ROS_WS}/isaac_ros_manipulation_config

      Copy the workflow configuration file for your robot:

      .. tab-set::
         :sync-group: robot

         .. tab-item:: UR5e with Robotiq 2F-85
            :sync: ur5e

            .. code:: bash

               cp $(ros2 pkg prefix --share isaac_ros_manipulation_bringup)/params/ur5e_robotiq_85_mac_and_cheese.yaml \
                  ${ISAAC_ROS_WS}/isaac_ros_manipulation_config/my_robot_config.yaml

         .. tab-item:: UR10e with Robotiq 2F-140
            :sync: ur10e

            .. code:: bash

               cp $(ros2 pkg prefix --share isaac_ros_manipulation_bringup)/params/ur10e_robotiq_2f_140_mac_and_cheese.yaml \
                  ${ISAAC_ROS_WS}/isaac_ros_manipulation_config/my_robot_config.yaml

            .. note::

               The behavior tree and blackboard parameter files copied below default to UR5e with Robotiq 2F-85 settings. Update them for UR10e as described in :ref:`Configure Objects and Workspace <configure-objects-and-workspace>`.

         .. tab-item:: Flexiv Rizon 4s with Grav
            :sync: flexiv

            .. code:: bash

               cp $(ros2 pkg prefix --share isaac_ros_manipulation_bringup)/params/flexiv_rizon4s_grav_gear_assembly.yaml \
                  ${ISAAC_ROS_WS}/isaac_ros_manipulation_config/my_robot_config.yaml

      Copy behavior tree and blackboard parameter files:

      .. tab-set::
         :sync-group: robot

         .. tab-item:: UR Robot
            :sync: ur5e

            .. code:: bash

               cp $(ros2 pkg prefix --share isaac_ros_manipulation_pick_and_place)/params/multi_object_pick_and_place_behavior_tree_params.yaml \
                  ${ISAAC_ROS_WS}/isaac_ros_manipulation_config/multi_object_pick_and_place_behavior_tree_params.yaml

               cp $(ros2 pkg prefix --share isaac_ros_manipulation_pick_and_place)/params/multi_object_pick_and_place_blackboard_params.yaml \
                  ${ISAAC_ROS_WS}/isaac_ros_manipulation_config/multi_object_pick_and_place_blackboard_params.yaml

         .. tab-item:: Flexiv Robot
            :sync: flexiv

            .. code:: bash

               cp $(ros2 pkg prefix --share isaac_ros_manipulation_pick_and_place)/params/flexiv_pick_and_place_behavior_tree_params.yaml \
                  ${ISAAC_ROS_WS}/isaac_ros_manipulation_config/flexiv_pick_and_place_behavior_tree_params.yaml

               cp $(ros2 pkg prefix --share isaac_ros_manipulation_pick_and_place)/params/flexiv_pick_and_place_blackboard_params.yaml \
                  ${ISAAC_ROS_WS}/isaac_ros_manipulation_config/flexiv_pick_and_place_blackboard_params.yaml

      **Files you'll edit:**

      * **Workflow configuration**: 
      
      .. code:: bash

         ${ISAAC_ROS_WS}/isaac_ros_manipulation_config/my_robot_config.yaml

      * **Behavior tree parameters**: 

      .. tab-set::
         :sync-group: robot

         .. tab-item:: UR Robot
            :sync: ur5e

            .. code:: bash

               ${ISAAC_ROS_WS}/isaac_ros_manipulation_config/multi_object_pick_and_place_behavior_tree_params.yaml

         .. tab-item:: Flexiv Robot
            :sync: flexiv

            .. code:: bash

               ${ISAAC_ROS_WS}/isaac_ros_manipulation_config/flexiv_pick_and_place_behavior_tree_params.yaml

      * **Blackboard parameters**: 

      .. tab-set::
         :sync-group: robot

         .. tab-item:: UR Robot
            :sync: ur5e

            .. code:: bash

               ${ISAAC_ROS_WS}/isaac_ros_manipulation_config/multi_object_pick_and_place_blackboard_params.yaml

         .. tab-item:: Flexiv Robot
            :sync: flexiv

            .. code:: bash

               ${ISAAC_ROS_WS}/isaac_ros_manipulation_config/flexiv_pick_and_place_blackboard_params.yaml

      Set up environment variables:

      .. code:: bash

         # Point to the directory containing your configuration files
         export ISAAC_ROS_MANIPULATION_WORKFLOW_CONFIG_DIR="${ISAAC_ROS_WS}/isaac_ros_manipulation_config"
         export ISAAC_ROS_MANIPULATION_PICK_AND_PLACE_CONFIG_DIR="${ISAAC_ROS_WS}/isaac_ros_manipulation_config"


   .. tab-item:: Build from Source
      :sync: source

      When building from source with ``--symlink-install``, you can edit configuration files directly in the source directories.

      **Files you'll edit:**

      * **Workflow configuration**:

        .. tab-set::
           :sync-group: robot

           .. tab-item:: UR5e with Robotiq 2F-85
              :sync: ur5e

              .. code:: bash

                 ${ISAAC_ROS_WS}/src/isaac_ros_manipulation/isaac_ros_manipulation_bringup/params/ur5e_robotiq_85_mac_and_cheese.yaml

           .. tab-item:: UR10e with Robotiq 2F-140
              :sync: ur10e

              .. code:: bash

                 ${ISAAC_ROS_WS}/src/isaac_ros_manipulation/isaac_ros_manipulation_bringup/params/ur10e_robotiq_2f_140_mac_and_cheese.yaml

              .. note::

                 The behavior tree and blackboard parameter files default to UR5e with Robotiq 2F-85 settings. Update them for UR10e as described in :ref:`Configure Objects and Workspace <configure-objects-and-workspace>`.

           .. tab-item:: Flexiv Rizon 4s with Grav
              :sync: flexiv

              .. code:: bash

                 ${ISAAC_ROS_WS}/src/isaac_ros_manipulation/isaac_ros_manipulation_bringup/params/flexiv_rizon4s_grav_gear_assembly.yaml

      * **Behavior tree parameters**: 

      .. tab-set::
         :sync-group: robot

         .. tab-item:: UR Robot
            :sync: ur5e

            .. code:: bash

               ${ISAAC_ROS_WS}/src/isaac_ros_manipulation/isaac_ros_manipulation_pick_and_place/params/multi_object_pick_and_place_behavior_tree_params.yaml

         .. tab-item:: Flexiv Robot
            :sync: flexiv

            .. code:: bash

               ${ISAAC_ROS_WS}/src/isaac_ros_manipulation/isaac_ros_manipulation_pick_and_place/params/flexiv_pick_and_place_behavior_tree_params.yaml

      * **Blackboard parameters**: 

      .. tab-set::
         :sync-group: robot

         .. tab-item:: UR Robot
            :sync: ur5e

            .. code:: bash

               ${ISAAC_ROS_WS}/src/isaac_ros_manipulation/isaac_ros_manipulation_pick_and_place/params/multi_object_pick_and_place_blackboard_params.yaml

         .. tab-item:: Flexiv Robot
            :sync: flexiv

            .. code:: bash

               ${ISAAC_ROS_WS}/src/isaac_ros_manipulation/isaac_ros_manipulation_pick_and_place/params/flexiv_pick_and_place_blackboard_params.yaml

      Set up environment variables:

      .. code:: bash

         # Point to the source directories containing the configuration files
         export ISAAC_ROS_MANIPULATION_WORKFLOW_CONFIG_DIR="${ISAAC_ROS_WS}/src/isaac_ros_manipulation/isaac_ros_manipulation_bringup/params"
         export ISAAC_ROS_MANIPULATION_PICK_AND_PLACE_CONFIG_DIR="${ISAAC_ROS_WS}/src/isaac_ros_manipulation/isaac_ros_manipulation_pick_and_place/params"


Edit Workflow Configuration File
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Edit the workflow configuration file to set your robot and camera configuration.

**Reference documentation:**

.. tab-set::
   :sync-group: robot

   .. tab-item:: UR5e with Robotiq 2F-85
      :sync: ur5e

      :ir_repo:`ur5e_robotiq_85_mac_and_cheese.yaml <isaac_ros_manipulation> <isaac_ros_manipulation_bringup/params/ur5e_robotiq_85_mac_and_cheese.yaml>`

   .. tab-item:: UR10e with Robotiq 2F-140
      :sync: ur10e

      :ir_repo:`ur10e_robotiq_2f_140_mac_and_cheese.yaml <isaac_ros_manipulation> <isaac_ros_manipulation_bringup/params/ur10e_robotiq_2f_140_mac_and_cheese.yaml>`

   .. tab-item:: Flexiv Rizon 4s with Grav
      :sync: flexiv

      :ir_repo:`flexiv_rizon4s_grav_gear_assembly.yaml <isaac_ros_manipulation> <isaac_ros_manipulation_bringup/params/flexiv_rizon4s_grav_gear_assembly.yaml>`

#. Set ``workflow_type: PICK_AND_PLACE`` and configure your ``camera_type``:

   .. tabs::

      .. tab:: RealSense

         Set ``camera_type`` to ``REALSENSE`` in your configuration file.

   .. important::

      **Verify depth configuration.** The sample configuration files include pre-configured engine file paths for all depth types (``ess_full_engine_file_path``, ``ess_light_engine_file_path``, ``foundationstereo_low_res_engine_file_path``, ``foundationstereo_high_res_engine_file_path``). To switch depth models, only the ``depth_type`` parameter needs to change and the workflow selects the correct engine automatically. Verify that all the required engine paths are valid for your platform during initial setup.

      - :ref:`Engine File Path Configuration <engine-file-path-configuration>` — engine file parameters for each ``depth_type``
      - :ref:`Depth Configuration Compatibility <depth-configuration-compatibility>` — which depth types are supported for each camera type (RealSense, Isaac Sim)
      - :ref:`Supported Model Combinations <supported-model-combinations>` — valid perception model combinations

   .. note::

      For the full configuration reference, refer to the :doc:`Manipulation Workflow Configuration Guide </reference_workflows/isaac_for_manipulation/packages/isaac_ros_manipulation_bringup/manipulation_workflow_config_guide>`.

   .. tip::

      **Foundation Stereo with a Static Planning Scene**

      Foundation Stereo takes approximately 1.5 seconds per depth frame on Thor
      (FP32, 576x960); see the :ref:`Comparing DNNs <repositories_and_packages/isaac_ros_dnn_stereo_depth/index:Comparing DNNs>`
      section. When it is paired with ``nvblox``, the 3D scene representation can
      lag the real world by the same amount and is not useful for dynamic collision
      avoidance. For
      workspaces that are guaranteed static (a fenced industrial cell, a fixed
      bench-top test rig), you can replace live 3D reconstruction with a pre-defined
      MoveIt planning scene:

      * Set ``depth_type`` to ``FOUNDATION_STEREO_LOW_RES`` or ``FOUNDATION_STEREO_HIGH_RES``.
      * Set ``enable_nvblox`` to ``false``.
      * Point ``moveit_collision_objects_scene_file`` to a ``.scene`` file that
        captures every workspace obstacle the robot could collide with.

      For instructions on creating and exporting a scene file, refer to
      :ref:`Workspace Configuration <workspace-configuration>` in the Configuration Guide.

   .. warning::

      Do not use this configuration in environments where people or objects may
      enter the workspace. Disabling ``nvblox`` turns off dynamic collision
      avoidance, so the robot will only avoid the obstacles listed in the scene
      file.

Configure Objects and Workspace
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. _configure-objects-and-workspace:

Edit the behavior tree and blackboard parameter files (prepared in `Prepare Configuration Files and Environment Variables`_) to configure the objects your robot will manipulate and define workspace parameters.

**Reference documentation:**

.. tab-set::
   :sync-group: robot

   .. tab-item:: UR Robot
      :sync: ur5e

      - :ir_repo:`Behavior Tree Parameters <isaac_ros_manipulation> <isaac_ros_manipulation_pick_and_place/params/multi_object_pick_and_place_behavior_tree_params.yaml>`
      - :ir_repo:`Blackboard Parameters <isaac_ros_manipulation> <isaac_ros_manipulation_pick_and_place/params/multi_object_pick_and_place_blackboard_params.yaml>`

   .. tab-item:: Flexiv Robot
      :sync: flexiv

      - :ir_repo:`Behavior Tree Parameters <isaac_ros_manipulation> <isaac_ros_manipulation_pick_and_place/params/flexiv_pick_and_place_behavior_tree_params.yaml>`
      - :ir_repo:`Blackboard Parameters <isaac_ros_manipulation> <isaac_ros_manipulation_pick_and_place/params/flexiv_pick_and_place_blackboard_params.yaml>`

.. important::

   **UR10e with Robotiq 2F-140**

   The default ``multi_object_pick_and_place_behavior_tree_params.yaml`` and ``multi_object_pick_and_place_blackboard_params.yaml`` files are configured for **UR5e with Robotiq 2F-85**. If you are using a UR10e with Robotiq 2F-140, update both files before launching:

   #. In the **behavior tree** parameter file, set ``interactive_marker.mesh_resource_uri`` to the Robotiq 2F-140 mesh:

      .. code-block:: yaml

         interactive_marker:
            mesh_resource_uri: 'package://isaac_ros_manipulation_ur_robot_description/meshes/robotiq_2f_140.obj'
            reference_frame: 'base_link'
            end_effector_frame: 'gripper_frame'

   #. In the **blackboard** parameter file, update ``grasp_file_path`` for each ``supported_objects`` entry to use the ``robotiq_2f_140`` grasp files:

      .. code-block:: yaml

         supported_objects:
            mac_and_cheese:
               class_id: '22'
               grasp_file_path: $(ros2 pkg prefix --share isaac_ros_manipulation_ur_robot_description)/config/robotiq_2f_140_grasps_mac_and_cheese.yaml
               mesh_file_path: ${ISAAC_ROS_WS}/isaac_ros_assets/isaac_ros_foundationpose/Mac_and_cheese_0_1/Mac_and_cheese_0_1.obj

            soup_can:
               class_id: '3'
               grasp_file_path: $(ros2 pkg prefix --share isaac_ros_manipulation_ur_robot_description)/config/robotiq_2f_140_grasps_soup_can.yaml
               mesh_file_path: ${ISAAC_ROS_WS}/isaac_ros_assets/isaac_ros_foundationpose/soup_can/soup_can.obj

.. note::

   The example configurations are pre-configured for SyntheticaDETR v1.0.0 with specific class IDs: Mac and Cheese box (``'22'``) and Soup can (``'3'``). If you're using a different detection model or objects, you'll need to update these class IDs to match your model's output.

   The Flexiv sample blackboard is pre-configured for the Soup can (``'3'``) with grasp files under ``isaac_ros_manipulation_flexiv_robot_description/config/``. Add additional ``supported_objects`` entries if you need to pick other objects.

For detailed configuration instructions covering object setup, workspace locations, and system parameters, refer to the :doc:`Pick and Place Configuration Guide </reference_workflows/isaac_for_manipulation/packages/isaac_ros_manipulation_pick_and_place/configuration_guide>`.

**Configuration Checklist**

Verify these settings in your behavior tree and blackboard parameter files before launching:

* **Objects:** ``supported_objects`` match scene objects with correct ``class_ids`` and valid grasp/mesh file paths
* **Workspace:** ``target_poses`` and ``home_pose`` are safe and reachable
* **Mode:** ``0`` = single bin, ``1`` = multi-bin sorting
* **Drop method:** YAML defaults, action goal, or RViz marker correction
* **System:** Action server names and ``startup_server_timeout_sec`` match your setup

.. important::

   Configuration changes require restarting the orchestration system. The behavior tree loads these parameters at startup and does not dynamically reload configuration files during execution.

.. tip::

   **Testing Configuration Without Hardware**: If you want to verify your configuration setup before proceeding to hardware, refer to the standalone quickstart in :doc:`isaac_ros_manipulation_pick_and_place </reference_workflows/isaac_for_manipulation/packages/isaac_ros_manipulation_pick_and_place/index>`. This uses dummy servers to test that your behavior tree logic and configuration files work correctly.

.. important::

   Set ``pose_estimation.camera_frame_id`` in the behavior tree parameters to match your ``camera_type``. Using the wrong value will cause pose estimation failures. See :ref:`Pose Estimation Frame IDs <pose-estimation-frame-ids>` in the Configuration Guide for the correct value for each camera type.


.. note::
   Run the :ref:`Driver and Hardware Tests <driver_and_hardware_tests>` to make sure your robot drivers are in a good state.

Run Pre-Flight Tests (Optional but highly recommended)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

#. To verify that you have setup the Isaac ROS Manipulation correctly, run the following command:

   .. code:: bash

      export ENABLE_MANIPULATOR_TESTING=on_robot

   Point to your configuration file:

   .. tab-set::
      :sync-group: installation

      .. tab-item:: Binary Package
         :sync: binary

         .. code:: bash

            export ISAAC_ROS_MANIPULATION_TEST_CONFIG=${ISAAC_ROS_MANIPULATION_WORKFLOW_CONFIG_DIR}/my_robot_config.yaml

      .. tab-item:: Build from Source
         :sync: source

         .. tab-set::
            :sync-group: robot

            .. tab-item:: UR5e with Robotiq 2F-85
               :sync: ur5e

               .. code:: bash

                  export ISAAC_ROS_MANIPULATION_TEST_CONFIG=${ISAAC_ROS_MANIPULATION_WORKFLOW_CONFIG_DIR}/ur5e_robotiq_85_mac_and_cheese.yaml

            .. tab-item:: UR10e with Robotiq 2F-140
               :sync: ur10e

               .. code:: bash

                  export ISAAC_ROS_MANIPULATION_TEST_CONFIG=${ISAAC_ROS_MANIPULATION_WORKFLOW_CONFIG_DIR}/ur10e_robotiq_2f_140_mac_and_cheese.yaml

            .. tab-item:: Flexiv Rizon 4s with Grav
               :sync: flexiv

               .. code:: bash

                  export ISAAC_ROS_MANIPULATION_TEST_CONFIG=${ISAAC_ROS_MANIPULATION_WORKFLOW_CONFIG_DIR}/flexiv_rizon4s_grav_gear_assembly.yaml

               Ensure ``workflow_type: PICK_AND_PLACE`` in the configuration file before running pick-and-place tests.


   Run the tests:

   .. code:: bash

      python3 -m pytest ${ISAAC_ROS_WS}/src/isaac_ros_manipulation/isaac_ros_manipulation_bringup/test

   .. note::

      You can also use ``colcon test --packages-select isaac_ros_manipulation_bringup`` to run the tests.
      However, ``pytest`` has a better output and makes it easier to view status and progress of the tests.
      If these tests fail, refer to :doc:`Isaac ROS Manipulation Testing Guide </reference_workflows/isaac_for_manipulation/tutorials/setup/testing_manipulator>` for more information.
      It is recommended to run the tests manually using ``launch_test`` and then manually inspecting the results.

   This will run a series of tests to verify that the Isaac ROS Manipulation is working correctly.

Launch the System
^^^^^^^^^^^^^^^^^

#. Set up networking (in each terminal):

   .. code:: bash

      export ROS_DOMAIN_ID=<ID_NUMBER>  # Avoid network interference

#. Install Cyclone DDS for more reliable real-time communication with the robot (one-time setup):

   .. code:: bash

      sudo apt-get install -y ros-:ir_ros_distro:-rmw-cyclonedds-cpp

#. Set the Cyclone DDS environment variable (required in **every** terminal):

   .. code:: bash

      export RMW_IMPLEMENTATION=rmw_cyclonedds_cpp

#. Prepare the robot for remote control:

   .. tab-set::
      :sync-group: robot

      .. tab-item:: UR Robot
         :sync: ur5e

         On the UR teach pendant, load the **remote program** and ensure that the robot is **paused** or **stopped** for safety purposes.

      .. tab-item:: Flexiv Robot
         :sync: flexiv

         Ensure the Flexiv robot is powered on and the emergency stop is released. Make sure that the robot is in ``Auto (Remote)`` mode.

#. (Optional) Open **another** terminal and launch the behavior tree viewer:

   .. code:: bash

      isaac-ros activate
      py-trees-tree-viewer

   .. note::

      The behavior tree viewer provides real-time visualization of tree structure, node states (``SUCCESS``/green, ``FAILURE``/red, ``RUNNING``/blue), blackboard variables (object queue, active object ID, drop poses), and timeline replay for debugging workflow execution.

   .. warning::

      Running the ``py-trees-tree-viewer`` GUI on Jetson Thor may impact workflow performance due to shared compute and GPU resources. Consider using it for debugging only when needed.

#. Open **another** terminal and launch the main workflow with your configuration:

   .. code:: bash

      isaac-ros activate

#. Source the workspace (required if at least one package was built from source in previous steps):

   .. code:: bash

      source install/setup.bash

#. Launch the workflow using the environment variable set earlier:

   .. tab-set::
      :sync-group: installation

      .. tab-item:: Binary Package
         :sync: binary

         .. code:: bash

            ros2 launch isaac_ros_manipulation_bringup workflows.launch.py \
               manipulator_workflow_config:=${ISAAC_ROS_MANIPULATION_WORKFLOW_CONFIG_DIR}/my_robot_config.yaml

      .. tab-item:: Build from Source
         :sync: source

         .. tab-set::
            :sync-group: robot

            .. tab-item:: UR5e with Robotiq 2F-85
               :sync: ur5e

               .. code:: bash

                  ros2 launch isaac_ros_manipulation_bringup workflows.launch.py \
                     manipulator_workflow_config:=${ISAAC_ROS_MANIPULATION_WORKFLOW_CONFIG_DIR}/ur5e_robotiq_85_mac_and_cheese.yaml

            .. tab-item:: UR10e with Robotiq 2F-140
               :sync: ur10e

               .. code:: bash

                  ros2 launch isaac_ros_manipulation_bringup workflows.launch.py \
                     manipulator_workflow_config:=${ISAAC_ROS_MANIPULATION_WORKFLOW_CONFIG_DIR}/ur10e_robotiq_2f_140_mac_and_cheese.yaml

            .. tab-item:: Flexiv Rizon 4s with Grav
               :sync: flexiv

               .. code:: bash

                  ros2 launch isaac_ros_manipulation_bringup workflows.launch.py \
                     manipulator_workflow_config:=${ISAAC_ROS_MANIPULATION_WORKFLOW_CONFIG_DIR}/flexiv_rizon4s_grav_gear_assembly.yaml

               Ensure ``workflow_type: PICK_AND_PLACE``, ``robot_sn`` are set in the configuration file. Refer to the section on how to :ref:`Create Manipulator Configuration File <robots/universal_robots/index:Create a Manipulator Configuration File>` for additional Flexiv-specific parameters.


Execute Pick and Place
^^^^^^^^^^^^^^^^^^^^^^

#. Enable the robot controller:

   .. tab-set::
      :sync-group: robot

      .. tab-item:: UR Robot
         :sync: ur5e

         On the UR teach pendant, press **play** to enable the robot.

      .. tab-item:: Flexiv Robot
         :sync: flexiv

         The Flexiv controller is activated automatically by the driver. No manual step is needed.

#. Open a **new** terminal and activate the Isaac ROS environment:

   .. code:: bash

      isaac-ros activate

#. Set the necessary environment variables:

   .. code:: bash

      export RMW_IMPLEMENTATION=rmw_cyclonedds_cpp

#. Trigger the workflow with an action goal:

   .. tabs::

      .. tab:: Single Bin Mode

         All objects to one location:

         .. code:: bash

            ros2 action send_goal --feedback /multi_object_pick_and_place isaac_ros_manipulation_interfaces/action/MultiObjectPickAndPlace \
              '{target_poses: {header: {frame_id: "base_link"}, poses: [{position: {x: -0.25, y: 0.45, z: 0.50}, orientation: {w: 0.017994, x: -0.677772, y: 0.734752, z: 0.020993}}]}, class_ids: [], mode: 0}'

      .. tab:: Multi-Bin Mode

         Objects sorted by class:

         .. code:: bash

            ros2 action send_goal --feedback /multi_object_pick_and_place isaac_ros_manipulation_interfaces/action/MultiObjectPickAndPlace \
              '{target_poses: {header: {frame_id: "base_link"}, poses: [{position: {x: -0.25, y: 0.50, z: 0.70}, orientation: {w: 0.017994, x: -0.677772, y: 0.734752, z: 0.020993}}, {position: {x: -0.25, y: 0.40, z: 0.40}, orientation: {w: 0.017994, x: -0.677772, y: 0.734752, z: 0.020993}}]}, class_ids: ["22", "3"], mode: 1}'

   .. warning::

      Update these example poses with positions safe and reachable in your robot's workspace.

   Refer to :doc:`API Reference </reference_workflows/isaac_for_manipulation/packages/isaac_ros_manipulation_pick_and_place/api_reference>` for complete action interface documentation.

Troubleshooting
---------------

Why does my robot fail to move ?
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

This issue can occur due to a variety of reasons, but we detail the most common reasons here in order of priority.

1. **Ghost Voxels due to poor depth estimation**: If the user has enabled NvBlox, the depth estimation can have some false positives and can add ghost voxels to the environment. The user can visualize the depth voxel cloud from NvBlox on ``Rviz`` or Foxglove and verify that this is the case.
   The user can experiment with better depth estimation by using the ``ESS_FULL``, ``FOUNDATION_STEREO_LOW_RES``, or ``FOUNDATION_STEREO_HIGH_RES`` models by changing the ``depth_type`` and ``enable_dnn_depth_in_realsense`` parameters in the manipulator configuration file. The workflow automatically selects the correct engine file for the chosen ``depth_type`` — see :ref:`Engine File Path Configuration <engine-file-path-configuration>`. You can also turn off NvBlox and generate a static planning scene from a MoveIt scene file.

2. **Ghost Voxels due to poor calibration**: If the user has performed a poor calibration, then the robot can potentially think it is in self collision with the environment - leading to planning failures.

3. **Pose Estimation**: If the object is not being detected or in a position that is not accessible to the robot- planning failures can occur. The user should take a look at the pose estimation that is output and verify that it is correct. Quite often the mesh files and segmentation mask being generated might not be accurate and so the user is expected to take care that they are referencing the correct mesh files in their manipulator workflow configuration file.

4. **System Load**: If the user is running a heavy system load, then the system can fail in non obvious ways. An example is when the user is running with 2 cameras with ``FOUNDATION_STEREO_LOW_RES`` / ``FOUNDATION_STEREO_HIGH_RES`` depth estimation and ``NvBlox`` enabled, this can lead to slowdowns and in some cases cameras shutting down. Please verify that the system is not overloaded by looking at the NITROS diagnostics and verifying all topics are being published and received by the system. One might need to over throttle the system or reduce the frame rate of the cameras.

Next Steps
----------

- :doc:`isaac_ros_manipulation_pick_and_place </reference_workflows/isaac_for_manipulation/packages/isaac_ros_manipulation_pick_and_place/index>` - Package documentation and standalone testing
- :doc:`Configuration Guide </reference_workflows/isaac_for_manipulation/packages/isaac_ros_manipulation_pick_and_place/configuration_guide>` - Advanced configuration and troubleshooting
- :doc:`API Reference </reference_workflows/isaac_for_manipulation/packages/isaac_ros_manipulation_pick_and_place/api_reference>` - Complete API documentation
- :doc:`isaac_ros_manipulation_orchestration </reference_workflows/isaac_for_manipulation/packages/isaac_ros_manipulation_orchestration/index>` - Behavior tree framework details
